# LanguageStudy

./: .gitignore  README.txt
HTML/ActorVisualizer/: index.xhtml  style.css  visualizer.js
HTML/SVG/: test.xhtml  test1.xhtml
HTML/canvas/: animation.html  test0.html  test1.html
Haskell/Parsec/: makeTokenParserExample.hs  parseExample.hs  perlExample.hs
Haskell/RealWorldHaskell/Chapter10/: EitherInt.hs
Haskell/RealWorldHaskell/Chapter3/: AlgebraicVector.hs  Distinction.hs  add.hs
Haskell/RealWorldHaskell/Chapter4/: IntParse.hs
Haskell/RealWorldHaskell/Chapter5/: Main.hs  PutJSON.hs  SimpleJSON.hs
Haskell/RealWorldHaskell/Chapter7/: basicio.hs  callingpure.hs
Haskell/Tools/: yaml_parse.hs
Haskell/YAHT/: 3.4_Test.hs  3.7_Recursion.hs  3.8_Interactivity.hs  7.7_Datatypes.hs  8.1_TypeSynonyms.hs  9.3_StateMonad.hs
Haskell/Yesod/: hoge.hs  persistTest.hs  return.hs
Haskell/Yesod/ajax_sample/: ajax_sample.hs  dateparse.hs  simple_yesod.hs  test.hs
Haskell/Yesod/bbbb/: Application.hs  Foundation.hs  LICENSE  Settings.hs  bbbb.cabal  main.hs
Haskell/Yesod/bulletin_board/: Application.hs  BulletinBoard.hs  Foundation.hs  LICENSE  Settings.hs  bb.cabal  bb.hs  runWarp.hs
Haskell/Yesod/bulletin_board/Settings/: StaticFiles.hs
Haskell/Yesod/bulletin_board/julius/: foo.julius
Haskell/Yesod/bulletin_board/static/: script.js
Haskell/Yesod/bulletin_board/static/css/: screen.css
Haskell/Yesod/sampleform/: Controller.hs  SampleForm.hs  form.hs
Haskell/Yesod/simple_file/: helloworld.hs
Haskell/Yesod/synopsis/: posttest.hs  synopsis.hs
Haskell/Yesod/testproj/: Controller.hs  Suzmeg.hs
Haskell/Yesod/testsqllite/: Controller.hs  Suztomo.hs
Haskell/concurrency/: forkio.hs  forkio2.hs  mt.hs  mt2.hs  tarai.hs
Haskell/socket/: echo.hs  echo2.hs  httpd.hs
LDAP/: README.txt  ldap_test.py
Perl/: Another.pm  Debug.pm  foo.out  main.pl
Rust/borrow_mut/: Cargo.toml
Rust/borrow_mut/src/: main.rs
Rust/conv_nn_mnist/: Cargo.toml  result.txt
Rust/conv_nn_mnist/src/: gradient.rs  lib.rs  (+4 more)
Rust/find_largest/: Cargo.toml
Rust/hello/: Cargo.toml
Rust/hello_alloc/: Cargo.toml
Rust/hello_closure/: Cargo.toml
Rust/hello_jawikitionary/: Cargo.toml
Rust/iron-gcd/: Cargo.toml
Rust/longest_string/: Cargo.toml
Rust/mandelbrot/: Cargo.toml
Rust/modify_vec/: Cargo.toml
Rust/msg_passing/: Cargo.toml
Rust/neural_network/: Cargo.toml
Rust/nn_mnist/: Cargo.toml
Rust/passing_ref/: Cargo.toml
Rust/perceptron/: Cargo.toml
Rust/webserver/: 404.html  Cargo.toml
Scala/: memo.txt  nickname.json  retrieve-cert.sh
Scala/project/: build.properties
Ubigraph/labcafe/: labgraph.py
antlr/: README.txt
antlr/exprtest/: Expr.g  ExprLexer.java  ExprParser.java  README.txt  Test.java
at/Actor/: actor.at  actor2.at  actor3.at  farRefA.at  farRefB.at  farRefC.at  futB.at  nodeA.at  nodeB.at  nodeC.at  test1.at  test2.at  test3.at
at/Classes/: dynamicParentChange.at
at/MultiNetwork/: futA.at  futB.at  futC.at
at/ServiceDiscovery/: test0.at  test1.at
python/mikan/: mikan.py
python/numpy/: hello_pylib.py  plot_forest_iris.py
python/twisted/: sslclient.py  sslserver.py
scheme/: 3.1.1.scm  3.3.1_mystery.scm  3.5.1_streams.scm  4.1_Evaluator.scm  4.2_Lazy_Evaluator.scm  4.3_AmbEvaluator.scm  4.4_QuerySystem.scm  binaryTree.scm
(+53 files in other folders)
