name:              BulletinBoard
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Tomohiro Suzuki
maintainer:        Tomohiro Suzuki
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://bb.yesodweb.com/

Flag production
    Description:   Build the production executable.
    Default:       False

Flag devel
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(devel)
        Buildable: True
    else
        Buildable: False

    if os(windows)
        cpp-options: -DWINDOWS

    hs-source-dirs: .
    exposed-modules: Application
    other-modules:   BulletinBoard
                     Foundation
                     Settings
                     Settings.StaticFiles
                     Import



executable         BulletinBoard
    if flag(devel)
        Buildable: False

    if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
    else
        ghc-options:   -Wall -threaded

    if os(windows)
        cpp-options: -DWINDOWS

    main-is:       BulletinBoard.hs
    hs-source-dirs: .

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 0.9.3.4    && < 0.10
                 , yesod-core                    >= 0.9.3      && < 0.10
                 , yesod-auth                    >= 0.7.3      && < 0.8
                 , yesod-static                  >= 0.3.1      && < 0.4
                 , yesod-default                 >= 0.5        && < 0.6
                 , yesod-form                    >= 0.3.4      && < 0.4
                 , mime-mail                     >= 0.3.0.3    && < 0.5
                 , clientsession                 >= 0.7.3      && < 0.8
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 0.6.2      && < 0.7
                 , persistent-sqlite     >= 0.6        && < 0.7
                 , template-haskell
                 , hamlet                        >= 0.10       && < 0.11
                 , shakespeare-css               >= 0.10       && < 0.11
                 , shakespeare-js                >= 0.10       && < 0.11
                 , shakespeare-text              >= 0.10       && < 0.11
                 , hjsmin                        >= 0.0.14     && < 0.1
                 , monad-control                 == 0.3.*
                 , wai-extra                     >= 0.4.6      && < 0.5

                 , utf8-string                   == 0.3.*
                 , SHA                           == 1.5.*
                 , transformers                  == 0.2.*
                 , persistent-template           == 0.6.*
                 , time                          == 1.2.*
                 , blaze-html == 0.4.*
                 , directory == 1.1.*